infrastructure/calico-system/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: whisker
  namespace: calico-system
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  rules:
  - host: whisker.greyroom.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: whisker
            port:
              number: 8081
  tls:
  - secretName: whisker-certificates-greyroom-net-production
